# status-bar

./: Cargo.toml  config.lua  extras.lua  flake.nix  stubs.lua
lua/: extras.lua  stubs.lua
lua/widgets/: container.lua  init.lua
src/: main.rs
src/renderer/: mod.rs  skia_cpu.rs
src/widgets/: mod.rs
src/window/: mod.rs  wayland.rs
