[package]
name = "status-bar"
version = "0.1.0"
edition = "2024"

[dependencies]
calloop = "0.12"
derive_more = { version = "2.1.1", features = ["display", "from_str"] }
env_logger = "0.11.8"
mlua = { version = "0.11.5", features = ["luajit", "macros", "vendored"] }
skia-safe = { version = "0.70", features = ["textlayout"] }
smithay-client-toolkit = { version = "0.18", features = ["calloop"] }
tokio = "1.48.0"
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.2", features = ["client"] }
